# py_workspace

./: main.py  pyproject.toml
apis/: github_stats.py
decorators_exp/: with_decorator.py  without_decorator.py
docling_session/: rag_pipeline_docling.py
embeddings/: embeddings.py
fastapi/: get_joke.py  get_joke_from_llm.py
langchains/: langchain_assignment.py  rag-pipeline-langchain.py
module_1/: market_capital.py
qdrant_collections/: qdrant_cloud_account.py  qdrant_collection.py  qdrant_filtering.py  qdrant_multi_upserts.py  qdrant_retrieve_oper.py  qdrant_semantic_search.py
rag_session/: rag_pipeline.py
session_6/: webscraper.py
