[project]
name = "py-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "docling>=2.81.0",
    "docling-core>=2.70.2",
    "docling-hierarchical-pdf>=0.1.6",
    "fastapi>=0.135.1",
    "groq>=1.1.1",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "langchain-groq",
    "langchain-huggingface>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "requests>=2.32.5",
    "semantic-router>=0.1.12",
    "sentence-transformers>=5.3.0",
    "uvicorn>=0.42.0",
]
